--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -1030,7 +1030,7 @@ function checkGameOver() {
     // ❌ Hráč prohrál – žádný tah a není na výstupu
     if (!hasMoves && !onExit) {
       setTimeout(() => {
-        showGameOver('R', '🤔 \n\nPUZZLE unfinished.');
+        showGameOver('R', '🤔 \n\nPUZZLE\nunfinished.');
         logEvent(`🚫  The player has no valid move.`);
         endGame('R');
       }, 200);
