--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -656,7 +656,7 @@ function triggerShatter(cell, player, value) {
 function renderBoard() {
   const el = document.getElementById('board');
   el.style.display = 'grid';
-el.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
+  el.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
   el.innerHTML = '';
   const valids = selected ? getValidMoves(currentPlayer) : [];
 
@@ -705,46 +705,59 @@ el.style.gridTemplateColumns = `repeat(${cols}, 1fr)`;
         cell.textContent = value;
       }
 
-      // 🟥🟦 Pozice hráčů
       const isRed = redPos && redPos.i === i && redPos.j === j;
       const isBlue = bluePos && bluePos.i === i && bluePos.j === j;
-
       const isCurrent = (currentPlayer === 'R' && isRed) || (currentPlayer === 'B' && isBlue);
       const isOpponent = (currentPlayer === 'R' && isBlue) || (currentPlayer === 'B' && isRed);
+      const isLast = lastMoveEnd && lastMoveEnd.i === i && lastMoveEnd.j === j;
+      const isExit = soloMode && exitCard && i === exitCard.i && j === exitCard.j;
 
-      if (isCurrent) {
-        cell.classList.add('highlight');
-        cell.style.boxShadow = currentPlayer === 'R'
-          ? '0 0 0 4px red'
-          : '0 0 0 4px blue';
-      } else if (isOpponent) {
-        cell.style.boxShadow = currentPlayer === 'R'
-          ? '0 0 0 3px red dotted'
-          : '0 0 0 3px blue dotted';
-      }
+      // 🎯 SOLO režim
+      if (soloMode) {
+        const isSelected = selected && selected.i === i && selected.j === j;
 
-      // 🧭 Poslední tah
-      if (lastMoveEnd && lastMoveEnd.i === i && lastMoveEnd.j === j) {
-        if (soloMode) {
+        if (isSelected) {
           cell.style.border = '4px solid red';
           cell.style.boxShadow = '0 0 10px red';
-        } else {
-          cell.style.border = currentPlayer === 'R' ? '3px solid blue' : '3px solid red';
-          cell.style.boxShadow = currentPlayer === 'R' ? '0 0 10px blue' : '0 0 10px red';
+        } else if (isLast) {
+          cell.style.border = '2px solid red';
+          cell.style.boxShadow = '0 0 5px red';
+        } else if (isRed) {
+          cell.style.border = '3px solid red';
+          cell.style.boxShadow = '0 0 8px red';
+        }
+      } else {
+        // 🤼 PvP / AI režim
+        if (isCurrent) {
+          cell.classList.add('highlight');
+          cell.style.boxShadow = currentPlayer === 'R'
+            ? '0 0 0 4px red'
+            : '0 0 0 4px blue';
+        } else if (isOpponent) {
+          cell.style.boxShadow = currentPlayer === 'R'
+            ? '0 0 0 4px red dotted'
+            : '0 0 0 4px blue dotted';
+        }
+
+        if (isLast) {
+          cell.style.border = currentPlayer === 'R'
+            ? '2px solid blue'
+            : '2px solid red';
+          cell.style.boxShadow = currentPlayer === 'R'
+            ? '0 0 10px blue'
+            : '0 0 10px red';
         }
       }
 
-      // ✅ Platné tahy
-if (selected) {
-  const isExit = soloMode && exitCard && i === exitCard.i && j === exitCard.j;
-  const allowExit = isExit && isAllCollapsedExcept([exitCard]);
+      // ✅ Platné tahy (včetně výstupu)
+      if (selected) {
+        const allowExit = isExit && isAllCollapsedExcept([exitCard]);
+        const isValid = valids.some(m => m.i === i && m.j === j);
 
-  const isValid = valids.some(m => m.i === i && m.j === j);
-
-  if (isValid || allowExit) {
-    cell.classList.add('valid');
-  }
-}
+        if (isValid || allowExit) {
+          cell.classList.add('valid');
+        }
+      }
 
       cell.addEventListener('click', () => selectCell(i, j, false));
       el.appendChild(cell);
