--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -1391,7 +1391,7 @@ function checkGameOver() {
       updateStats();
 
       setTimeout(() => {
-        showGameOver('R', '🏆\n\Congratulations.');
+        showGameOver('R', '🏆\n\n\Congratulations.');
         logEvent(`🏆 Player successfully solved the puzzle.`);
         endGame('R');
       }, 200);
