--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -281,8 +281,8 @@
   <p>Player 1 (red) shuffles the deck of cards and deals them out face-up to form a 4x4 grid. Each player places their pawns on their own starting joker card. Red begins on the red joker, and blue begins on the black joker.</p>
 
   <h4>PLAY</h4>
-  <p>Red goes first. The number of spaces you must move is determined by the number on your <strong> starting card</strong> . A <strong> starting card</strong>  is the card on which you begin your turn. On your first turn, your starting card is a <strong> joker</strong> .</p>
-  <p>The joker is wild, and it allows you to move 1, 2, 3, or 4 spaces. It is the only card that allows you to choose how far you move. After you complete your move, flip your <strong> starting card</strong>  face down. That card has <strong> collapsed</strong> , and it can no longer be passed through or landed on.</p>
+  <p>Red goes first. The number of spaces you must move is determined by the number on your <strong> starting card</strong> . A <strong> starting card</strong>  is the card on which you begin your turn. On your first turn, your starting card is a <strong> joker</strong> which allows you to move <strong>one space</strong>. </p>
+  <p>After you complete your move, flip your <strong> starting card</strong>  face down. That card has <strong> collapsed</strong> , and it can no longer be passed through or landed on.</p>
   <p>From your second turn on, you must move a number of spaces equal to your <strong> starting card’s</strong>  number. If your <strong> starting card</strong>  is a 2, you must move two spaces. If it is a 4, you must move four spaces and so on.</p>
 
   <h4>MOVEMENT</h4>
