--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -336,7 +336,7 @@ game: 1) replace low numbers with higher numbers or 2) make the grid bigger by a
       <option value="random">Random</option>
       <option value="pvp">PvP (R)</option>
   <option value="solo-3x3">Solo mode 3×3 🔁</option>
-  <option value="solo-4x4">Sólo mode 4×4 🔁</option>
+  <option value="solo-4x4">Solo mode 4×4 🔁</option>
 </select>
 <span id="difficultyLabel">🔁</span>
 
