--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -314,7 +314,8 @@ game: 1) replace low numbers with higher numbers or 2) make the grid bigger by a
 
          <strong> Solo mode (difficulty)</strong>
          <p>There are 2 modes to choose from in the program <strong>3x3</strong> or <strong>4x4</strong>. Both modes generate a solvable game board from several predefined sets of cards.</p>
-         <p>After selecting the mode, the game board will be generated. <strong>The color</strong> of the wheel next to the mode selection indicates the difficulty of the game board.</p>
+         <p>After selecting the game mode, <strong>a colored marker</strong> appears, indicating the <strong>difficulty</strong> of the generated game board.</p>
+         
 	
      	 <dl>// 3x3</dl>
 		  <dl>'1,1,1,2,2,2,3,B,R': '🟢'</dl>
