--- a/Collapsi_AI_BASE64_en.html
+++ b/Collapsi_AI_BASE64_en.html
@@ -1248,7 +1248,7 @@ function renderBoard() {
       : '';
 
 const historyNote = isRed && !soloMode
-  ? ` <span style="color:darkred;">[↺ hráčova paměť]</span>`
+  ? ` <span style="color:darkred;">[↺ player's memory]</span>`
   : '';
 
     const logEntry = `[${time}] <span style="color:${whoColor};">${who}</span>: ${fullPath}${scoreText}${historyNote}<br>`;
